--- a/src/main/webapp/resources/css/paper-kit.css
+++ b/src/main/webapp/resources/css/paper-kit.css
@@ -6,14 +6,60 @@
 	font-size:0.8em;
 }
 
-
 .acc-content{
     width: 250px;
     height: 170px;
     padding: 20px;
 }
+
 .item{
 	margin-top:5px;
+}
+
+.ui-datepicker {
+	font-size: 12px;
+	width: 430px;
+	height: 330px;
+}
+
+.ui-datepicker select.ui-datepicker-month {
+	width: 70%;
+	font-size: 11px;
+}
+
+.ui-datepicker select.ui-datepicker-year {
+	width: 70%;
+	font-size: 11px;
+}
+
+.ui-datepicker table {
+	width: 100%;
+	height: 280;
+	font-size: 1.5em;
+}
+
+.ui-datepicker .ui-datepicker-title {
+	line-height: 3em;
+}
+
+#alternate {
+	width: 200;
+	height: 200;
+	margin-top: 60;
+	border-radius: 100px;
+	font-size: 1.5em;
+}
+
+.nc-calendar-60::before {
+	font-size: 3em;
+}
+
+.time-list .form-check {
+	margin-left: 30px;
+}
+
+.radio-list {
+	margin-left: 30px;
 }
 
 /* ********************************************* */
